# Neural-Foundation-Model

./: LICENSE
Neural Foundation Model/: Makefile  README.md  pyproject.toml  requirements.txt
Neural Foundation Model/configs/training/: foundation_model.yaml
Neural Foundation Model/docker/: Dockerfile.inference  Dockerfile.training  docker_compose.yml
Neural Foundation Model/examples/: quick_start.py
Neural Foundation Model/kubernetes/training/: training-job.yaml
Neural Foundation Model/scripts/: data_preprocessing.py  real_time_inference.py  train_foundation_model.py
Neural Foundation Model/src/neural_foundation/data/: streaming_loader.py
Neural Foundation Model/src/neural_foundation/privacy/: __init__.py  anonymization.py  differential_privacy.py
Neural Foundation Model/src/neural_foundation/signal_processing/: artifacts.py  filters.py
Neural Foundation Model/src/neural_foundation/training/: losses.py
